--- a/index.html
+++ b/index.html
@@ -7,40 +7,78 @@
     <title>Harry Potter</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
-                
+
 </head>
 
 <body>
-    <div id="video-background">
-        <iframe 
-            src="https://www.youtube-nocookie.com/embed/IaBz8bBaC0M?autoplay=1&mute=1&controls=0&showinfo=0&rel=0&modestbranding=1&start=0&playsinline=1" 
-            frameborder="0" 
-            allow="autoplay; encrypted-media" 
-            allowfullscreen 
-            style="width: 100%; height: 100%; border:none;">
-        </iframe>
-    </div>
-    <nav>
-        <div>
-            <header>
-                <img src="./img/logo.png" class="logo">
-                <div class="navbar">
-                    <nav class="navlink">
+    <div>
+        <div id="video-background">
+            <iframe
+                src="https://www.youtube-nocookie.com/embed/IaBz8bBaC0M?autoplay=1&mute=1&controls=0&showinfo=0&rel=0&modestbranding=1&start=0&playsinline=1&loop=1&playlist=IaBz8bBaC0M"
+                frameborder="0" allow="autoplay; encrypted-media" allowfullscreen
+                style="width: 100%; height: 100%; border:none;">
+            </iframe>
+        </div>
+        <header>
+            <img src="./img/logo.png" class="logo">
+            <div class="navbar">
+                <nav class="navlink">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About Us</a></li>
                     </ul>
-                    </nav>
-                    <nav class="navlink1">
+                </nav>
+                <nav class="navlink1">
                     <ul>
                         <li><a href="#">Get Started</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#form">Contact Us</a></li>
                     </ul>
-                    </nav>
+                </nav>
+            </div>
+        </header>
+        <div class="gap"></div>
+        <!--About Us-->
+        <div class="about-us">
+            <h2>About Us</h2>
+            <div class="about-wrapper">
+                <div class="about-img">
+                    <img src="./img/abtUs.png" alt="About Us">
                 </div>
-            </header>
+                <div class="about-content">
+                    <p>
+                        At Wizarding World Chronicles, we celebrate the wonders of Harry Potter. Explore spells,
+                        stories, and fan creations while connecting with a global community of wizarding fans. Magic
+                        awaits!
+                    </p>
+                </div>
+            </div>
         </div>
-    </nav>
+
+
+
+        <div class="form-container" id="form">
+            <h2>Hogwarts Registration Form</h2>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" placeholder="Your Name">
+
+                <label for="address">Email:</label>
+                <textarea id="address" name="address" placeholder="Your Address"></textarea>
+
+                <label for="house">Select House:</label>
+                <select id="house" name="house">
+                    <option value="gryffindor">Gryffindor</option>
+                    <option value="hufflepuff">Hufflepuff</option>
+                    <option value="ravenclaw">Ravenclaw</option>
+                    <option value="slytherin">Slytherin</option>
+                </select>
+
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
