almost final push with no bugs, cap img remaining

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <div class="image">
                 <img src="./img/cap.png" alt="Sorting Hat">
             </div>
+            <!-- <div class="gap"></div> -->
         </div>
 
         <!-- Cards Section -->
